; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_switch.c_spu_init_csa.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_switch.c_spu_init_csa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spu_state = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spu_init_csa(%struct.spu_state* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.spu_state*, align 8
  %4 = alloca i32, align 4
  store %struct.spu_state* %0, %struct.spu_state** %3, align 8
  %5 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %6 = icmp ne %struct.spu_state* %5, null
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @EINVAL, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %2, align 4
  br label %29

10:                                               ; preds = %1
  %11 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %12 = call i32 @memset(%struct.spu_state* %11, i32 0, i32 4)
  %13 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %14 = call i32 @spu_alloc_lscsa(%struct.spu_state* %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %10
  %18 = load i32, i32* %4, align 4
  store i32 %18, i32* %2, align 4
  br label %29

19:                                               ; preds = %10
  %20 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %21 = getelementptr inbounds %struct.spu_state, %struct.spu_state* %20, i32 0, i32 0
  %22 = call i32 @spin_lock_init(i32* %21)
  %23 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %24 = call i32 @init_prob(%struct.spu_state* %23)
  %25 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %26 = call i32 @init_priv1(%struct.spu_state* %25)
  %27 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %28 = call i32 @init_priv2(%struct.spu_state* %27)
  store i32 0, i32* %2, align 4
  br label %29

29:                                               ; preds = %19, %17, %7
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @memset(%struct.spu_state*, i32, i32) #1

declare dso_local i32 @spu_alloc_lscsa(%struct.spu_state*) #1

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @init_prob(%struct.spu_state*) #1

declare dso_local i32 @init_priv1(%struct.spu_state*) #1

declare dso_local i32 @init_priv2(%struct.spu_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
